# worldofcrypto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  requirements.txt
assets/css/: hud.css  style.css
bots/: __init__.py  ai_bot.py  pathfinding.py
config/: game.config.js  realms.js  servers.config.js  token.config.js
docs/: ARCHITECTURE.md
ml/: combat_model.py
native/: CMakeLists.txt  README.md
native/include/: entity.hpp  vec2.hpp
native/src/: combat.cpp  main.cpp  network.cpp  pathfinding.cpp  physics.cpp
server/: db.js  gateway.js  market.js  matchmaking.js  rateLimiter.js  realm.js  realmDirectory.js  server.js  session.js
server/migrations/: 001_init.sql  002_guilds.sql  003_achievements.sql
server/models/: achievement.js  guild.js  item.js  leaderboard.js  player.js  session.js
server/regions/: europe.js  us.js
server/routes/: auth.js  guild.js  leaderboard.js  market.js  party.js  progress.js  realms.js  trade.js
src/: api.js  game.js  input.js  main.js  world.js
src/3d/: animationMixer.js  lights.js  mesh.js  modelLoader.js  scene3d.js
src/ai/: pathfinder.js  stateMachine.js
src/animation/: animations.js  animator.js  spriteSheet.js
src/audio/: audioManager.js  soundBank.js
src/core/: assetLoader.js  camera.js  engine.js  loop.js  renderer.js
src/entities/: boss.js  demohunter.js  enemy.js  entity.js  hero.js  knight.js  mage.js  mount.js  npc.js  pet.js  rogue.js
src/i18n/: locales.js
tools/: __init__.py  balance_simulator.py  data_analysis.py  loot_simulator.py  map_generator.py
(+46 files in other folders)
